# Pharmaceutical-Database-Management-System

./: README.md
SAGE-pharmacy-main/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package.json
SAGE-pharmacy-main/.github/workflows/: ci.yaml
SAGE-pharmacy-main/backend/: .env.example  .gitignore  nest-cli.json  package-lock.json  package.json
SAGE-pharmacy-main/backend/prisma/: forward.sql  schema.prisma
SAGE-pharmacy-main/backend/rust-service/: .env.example  Cargo.toml  Dockerfile
SAGE-pharmacy-main/backend/rust-service/.sqlx/: query-ece018587a2c90d545cfc4e2f51306d3cca2447e393716e2ff34bad74e89ffba.json
SAGE-pharmacy-main/backend/rust-service/src/: main.rs  models.rs
SAGE-pharmacy-main/backend/rust-service/src/handlers/: provider.rs
SAGE-pharmacy-main/backend/rust-service/src/services/: mod.rs  provider.rs  stock.rs
SAGE-pharmacy-main/backend/src/: app.controller.ts  app.module.ts  main.ts
SAGE-pharmacy-main/backend/src/archived-order/: archived-order.controller.spec.ts  archived-order.controller.ts  archived-order.module.ts  archived-order.service.spec.ts  archived-order.service.ts
SAGE-pharmacy-main/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
SAGE-pharmacy-main/backend/src/database/: datas.json  seed.ts
SAGE-pharmacy-main/backend/src/mail/: mail.controller.spec.ts  mail.controller.ts  mail.module.ts  (+1 more)
SAGE-pharmacy-main/frontend/: index.html  package-lock.json  package.json
SAGE-pharmacy-main/frontend/src/: App.tsx  api.ts  hooks.ts  main.tsx  models.ts  paths.tsx  routes.tsx
(+80 files in other folders)
