[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.5"
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
futures = "0.3.29"

[dependencies.sqlx]
version = "0.7.3"
features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono", "uuid"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde", "v4"]
